# cs8395-assignment1

./: .gitignore
Tactography/: CMakeLists.txt  Tactography.cxx  Tactography_Click.cxx  Tactography_VTK.cxx
data/: CCSegmentation.nrrd  DTIBrain.nhdr
